# NLP_project

./: NER.ipynb  README.md  howtouse.ipynb  installed_modules.txt  ner.ipynb  pyproject.toml
src/data/original/: conll_test.csv  conll_valid.csv
src/nlp-project/: PretrainedNER.ipynb  main.py
src/notebooks/: NER.ipynb  PretrainedNER.ipynb  mlflow_book.ipynb
src/notebooks/.ipynb_checkpoints/: PretrainedNER-checkpoint.ipynb
src/notebooks/mlruns/0/: meta.yaml
src/notebooks/mlruns/307401685973690371/: meta.yaml
src/notebooks/mlruns/307401685973690371/tags/: mlflow.note.content  project_name
