[project]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "WinNKyawWilly",email = "winnaingkyaw_win@cmu.ac.th"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pytorch-crf (>=0.7.2,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "widgetsnbextension (>=4.0.13,<5.0.0)",
    "flair (>=0.15.1,<0.16.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "mlflow (>=2.20.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = "Potical NER and Sentiment Analysis"
authors = [
    "Win Naing Kyaw"
]
readme = "README.md"
packages = [{ include = "nlp-project", from = "src" }]


